--- a/index.html
+++ b/index.html
@@ -1,11 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LexVBush Portfolio</title>
-  </head>
-  <body>
-    <h1>Hello LexVBush!</h1>
-  </body>
-</html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>She's a Pill Podcast</title>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            margin: 0;
+            font-family: 'Montserrat', sans-serif;
+        }
+        header {
+            background: white;
+            padding: 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        nav {
+            display: flex;
+        }
+        nav a {
+            margin: 0 15px;
+            text-decoration: none;
+            color: #DAA520;
+            font-weight: bold;
+        }
+        .menu-toggle {
+            display: none;
+            cursor: pointer;
+            font-size: 24px;
+        }
+        .hero {
+            background: #4A0B0B;
+            color: white;
+            text-align: center;
+            padding: 50px 20px;
+        }
+        .hero img {
+            max-width: 200px;
+        }
+        .button {
+            background: #D9534F;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 5px;
+            text-decoration: none;
+            display: inline-block;
+            margin-top: 20px;
+        }
+        .hosts, .episodes {
+            text-align: center;
+            padding: 40px 20px;
+        }
+        .hosts {
+            background: #B6B800;
+        }
+        .episodes {
+            background: #1A051A;
+            color: white;
+        }
+        .grid {
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+        .grid div {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            width: 200px;
+        }
+        .grid div p {
+            margin-top: 10px;
+            font-size: 14px;
+            color: black;
+        }
+        .contact {
+            background: #907D99;
+            text-align: center;
+            padding: 50px 20px;
+        }
+        .contact-box {
+            background: #DAA520;
+            padding: 20px;
+            display: inline-block;
+            border-radius: 5px;
+        }
+        @media (max-width: 768px) {
+            nav {
+                display: none;
+                flex-direction: column;
+                width: 100%;
+                position: absolute;
+                top: 60px;
+                left: 0;
+                background: white;
+                text-align: center;
+            }
+            nav a {
+                padding: 10px;
+                display: block;
+            }
+            .menu-toggle {
+                display: block;
+            }
+            .grid {
+                flex-direction: column;
+                align-items: center;
+            }
+        }
+    </style>
+    <script>
+        function toggleMenu() {
+            const nav = document.querySelector('nav');
+            nav.style.display = nav.style.display === 'flex' ? 'none' : 'flex';
+        }
+    </script>
+</head>
+<body>
+    <header>
+        <div class="logo">S</div>
+        <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Episodes</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+        </nav>
+    </header>
+    <section class="hero">
+        <img src="asset 2_1.png" alt="She's a Pill Podcast">
+        <p>The podcast that empowers young women to think deeper</p>
+        <a href="#" class="button">Listen Now</a>
+    </section>
+    <section class="hosts">
+        <div class="grid">
+            <div>
+                <img sr
